<!--
  ~ Copyright (c) 2018.  Adrian Raff AKA Fr0stsp1re
  ~ *************PROJECT LICENSE*************
  ~
  ~ This project was submitted by Adrian Raff as part of the  Android Basics Nanodegree At Udacity.
  ~
  ~ The Udacity Honor code requires your submissions must be your own work.
  ~ Submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and may result in disciplinary action.
  ~
  ~ The author of this project allows you to check the code as a reference only. You may not submit this project or any part
  ~ of the code as your own.
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">MotorcycleKnowledgeQuiz</string>
    <string name="title_1">The Motorcycle Knowledge Quiz</string>
    <string name="text_instructions">Welcome to the motorcycle knowledge quiz. This is a non timed quiz to test your knowledge on motorcycle trivia as well as overall safety and operation. At the end of the quiz you will be given the opportunity to review your questions and e mail the results. A grade of A thru F will be given based on the upper 60%. There is a total of 9 questions on this particular quiz. \n\n\ The option to add more questions, or localize the app is available by editing a few resource files. The questions for this sample quiz exam are provided by a string array in the array.xml file. The string array is being used as a pseudo flat table database using "|" as a delimiter. This is later parsed by the stringTokenizer class into variables that are question type, the question itself and the possible correct answers. The users answers are stored in a multi dimensional array that can be paged through so they can change their answers. \n\n\ The sample project is still WIP and I hope to bring it to a level where I can use it as a marketing tool for one of my own business in the motorcycle repair industry. \n\n\ To begin, please enter your name and e-mail address then click the arrow.  </string>
    <string name="header_title_1">QuizApp</string>
    <string name="input_1">Please enter your name</string>
    <string name="button_text_play">Begin</string>
    <string name="title_activity_free_text_response">FreeTextResponseActivity</string>
    <string name="title_activity_one_or_more">OneOrMoreActivity</string>
    <string name="radiobutton_multi_answer_1">RadioButton</string>
    <string name="radiobutton_answer_multi_2">RadioButton</string>
    <string name="radiobutton_multi_answer_3">RadioButton</string>
    <string name="radiobutton_mutli_answer_4">RadioButton</string>
    <string name="grade_theAnswersYouSelectedWere">Lets review your quiz. The questions were:</string>
    <string name="email_testResults">Test Results</string>
    <string name="end_your_grade_is">Your grade is:</string>
    <string name="startApp_thank_you">Thank you,</string>
    <string name="startApp_get_ready">. Get ready to begin!</string>
    <string name="error_something_wrong">Uh oh! Something went wrong</string>
    <string name="error_please_select_answer">Please select an answer!</string>
    <string name="answers_correct">You got all the answers correct</string>
    <string name="answer_correct_a">Answer A was correct</string>
    <string name="answer_correct_b">Answer B was correct</string>
    <string name="answer_correct_c">Answer C  was correct</string>
    <string name="answer_correct_d">Answer D was correct</string>
    <string name="answer_try_again">Oops try again!</string>
    <string name="the_answer_was_correct">The answer was correct</string>
    <string name="answer_wrong">The answer was wrong! The correct answer is: &#160; </string>
    <string name="something_went_wrong">Uh oh! Something went wrong</string>
    <string name="error_no_prior_questions">Sorry there are no more questions prior to this one!</string>
    <string name="end_you_finished">You finished the quiz!</string>
    <string name="end_your_answers_were">Your answer(s) were:</string>
    <string name="end_correct_answers_were">The correct answers were:</string>
    <string name="error_out_of_bounds">out of bounds!</string>
    <string name="end_grade_a">1st Place! Moto Guru!</string>
    <string name="end_grade_b">2nd Place! Total Gear Head!</string>
    <string name="end_grade_c">3rd Place! Motorcycle Enthusiast!</string>
    <string name="end_grade_d">4th Place Motorcycle Noob!</string>
    <string name="end_grade_f">5th Place! You KKnow Nothing!</string>
    <string name="error_problem">Opps! There is a problem!</string>
    <string name="end_congrats">Congratulations</string>
    <string name="exclamation">! &#160;</string>
    <string name="end_you_made_it_to_the_end">You made it to the end!</string>
    <string name="end_total_questions_righ">The total amount of questions you got right were &#160;</string>
    <string name="end_out_of">&#160; out of &#160;</string>
    <string name="end_that_is">That is &#160;</string>
    <string name="percent">%</string>
    <string name="end_overall_grade">Your ranking: &#160;</string>
    <string name="please_enter_your_first_and_last_name">Please enter your first and last name.</string>
    <string name="email">Email</string>
</resources>
